카카오 로그인 평범한 a태그로 변환

--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -9,3 +9,11 @@
 	font-style: normal;
 }
 
+
+body {
+  font-family: 'GmarketSansMedium', sans-serif;
+}
+
+planner_calender {
+  font-family: 'ABeeZee', sans-serif;
+}
