Tmap 을 이용해 좌표를 통해 주소 알아내기

--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -32,8 +32,8 @@
 <!-- 카카오맵 -->
 <script type="text/javascript"
 	src="//dapi.kakao.com/v2/maps/sdk.js?appkey=24d1b6883d7e9adfaf4ff1844fa92b7a&autoload=false&libraries=services"></script>
-
-
+<!-- Tmap -->
+<script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=JtTmUgD4yw9LrbRlREh2B8dYadiOogkRQNM0SdBj"></script>
 <link rel="stylesheet" href="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.css" />
 <script src="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.min.js"></script>
 </head>
